Added new example figures

--- a/Luke_Drift_example_notebook.ipynb
+++ b/Luke_Drift_example_notebook.ipynb
@@ -660,7 +660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PLOT ALL THE DRIFTAS :D #\n",
+    "# PLOT ALL THE DRIFTERS IN THE GDP DATASET#\n",
     "all_GDP_plot = ld.driftplot(ds, domain=[-180,180,-60,60], set_dpi=720)"
    ]
   },
