Cleaned up example notebook a bit more
Added new comments and changed default paths to suggest user to use their local path

--- a/Luke_Drift_example_notebook.ipynb
+++ b/Luke_Drift_example_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "import geopandas as gpd\n",
     "#from numba import njit\n",
     "\n",
-    "#ANALysis\n",
+    "#analysis\n",
     "from scipy import stats\n",
     "from scipy.optimize import curve_fit\n",
     "from scipy.optimize import minimize\n",
@@ -42,7 +42,6 @@
     "import geopy as gp\n",
     "from shapely.geometry import Point\n",
     "from shapely.geometry import Polygon\n",
-    "\n",
     "\n",
     "# Others\n",
     "from itertools import combinations\n",
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -599,8 +598,8 @@
     "file_GDP = 'gdp_v2.00.nc'\n",
     "#file_EAC = 'EAC_drifters_disp.nc' # For EAC subset\n",
     "\n",
-    "path = 'C:/Users/z5493451/OneDrive - UNSW/Documents/Data/Drifters/' # Where data lives\n",
-    "fig_path = 'C:/Users/z5493451/OneDrive - UNSW/Documents/Ooni/UNSW/PhD/Figures/' # Where figures exist\n",
+    "path = 'C:/your/path/here/' # Where data lives\n",
+    "fig_path = 'C:/your/path/here/Figures/' # Where figures exist\n",
     "\n",
     "fileloc_GDP = path+file_GDP\n",
     "#fileloc_EAC = path+file_EAC\n",
@@ -625,29 +624,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chunking with Dask (Optional)\n",
-    "The bellow section plays around with chunks. Chunks set the data into 'array-like' objects that can be processed through functions using the apply_ufunc call in xarray. This may come in useful when doing things such as wavelet ridge analysis on multiple trajectories (a similar opperation is shown using a periodogram method in the GDP introductory analysis notebook at https://github.com/Cloud-Drift/earthcube-meeting-2022/tree/main). For simplicity, we do not use dask in this example notebook (all functions work without dask)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Set chunk sizes to align with rowsizes\n",
-    "rowsize = ds.rowsize.values\n",
-    "ds.close()  # close ds so that we can open it again with aligned chunk sizes\n",
-    "# align chunks with the length of each individual trajectory\n",
-    "chunk_settings = {'obs': tuple(rowsize.tolist())}\n",
-    "ds = xr.open_dataset(fileloc_GDP, decode_times=True, chunks=chunk_settings)\n",
-    "ds"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Example plots using the 'driftplot' function\n",
     "The driftplot function is made to make ploting drifters easier, by having simple inputs to control which variables are plotted, whether starting points and drifter ID labels should be shown, and what domain should be plotted. It also has an option to show or hide land boundaries.\n",
     "\n",
@@ -661,7 +637,7 @@
    "outputs": [],
    "source": [
     "# PLOT ALL THE DRIFTERS IN THE GDP DATASET#\n",
-    "all_GDP_plot = ld.driftplot(ds, domain=[-180,180,-60,60], set_dpi=720)"
+    "all_GDP_plot = ld.driftplot(ds, domain=[-180,180,-60,60], set_dpi=300)"
    ]
   },
   {
@@ -696,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -710,8 +686,8 @@
    "source": [
     "# Create animation frames\n",
     "animation_domain  = (150,156,-31,-36)\n",
-    "framedir = 'C:/Users/z5493451/OneDrive - UNSW/Documents/Data/Drifters/animations'\n",
-    "outputdir = 'C:/Users/z5493451/OneDrive - UNSW/Documents/Data/Drifters/animations_full/temp.gif'\n",
+    "framedir = 'C:/your/path/here/animations'\n",
+    "outputdir = 'C:/your/path/here/animation.gif'\n",
     "ld.drift_frames(ds=ds, IBM=None, plot_int=1, duration=60, labs=['SVP'], domain=animation_domain, framedir=framedir, traj_cmap=glob_cmap, traj_norm=glob_norm)\n",
     "\n",
     "# Create animation from frames\n",
@@ -789,6 +765,10 @@
     "\n",
     "\n",
     "# SEGMENT THE NORTH AND SOUTH SUBSETS USING A 10 DAY CUT LENGTH #\n",
+    "# NOTE: Be careful using the segmented `duplicated` trajectories\n",
+    "# as they may introduce biases in the analysis. I recommend checking\n",
+    "# the data density through space and time before using them.\n",
+    "\n",
     "cut_length = 10\n",
     "\n",
     "ds_north_drogued = ld.segments(ds_north_drogued, tl=cut_length)\n",
